@@ -7,6 +7,8 @@ tags: [java]
 ---
 {% include JB/setup %}
 
+# Getting Started
+
 ## Introduction
 Java was originally developed by James Gosling at Sun Microsystems and released in 1995 as a core component of Sun Microsystems' Java platform.
 
@@ -60,6 +62,7 @@ Downloads [Java SE 6](http://www.oracle.com/technetwork/java/javasebusiness/down
     $
 
 ##-------------------------------------------------------------------------------------------------------
+# Learning the Java Language
 
 ## Language Basics
 Describes the traditional features of the language, including concepts, comments, data types, arrays, variables, operators, and control flow.
@@ -1679,6 +1682,7 @@ The strategy is as follows.
     In Unix:      export $CLASSPATH
 
 ##-------------------------------------------------------------------------------------------------------
+# Essential Java Class
 
 ## Exceptions
 The Java programming language uses exceptions to handle errors and other exceptional events.
@@ -3627,8 +3631,1804 @@ The System class maintains a Properties object that describes the configuration 
 #####Writing System Properties
 To modify the existing set of system properties, use `System.setProperties`.
 
+    import java.io.FileInputStream;
+    import java.util.Properties;
+
+    public class PropertiesTest {
+        public static void main(String[] args)
+            throws Exception {
+
+            // set up new properties object
+            // from file "myProperties.txt"
+            FileInputStream propFile =
+                new FileInputStream( "myProperties.txt");
+            Properties p =
+                new Properties(System.getProperties());
+            p.load(propFile);
+
+            // set the system properties
+            System.setProperties(p);
+            // display new properties
+            System.getProperties().list(System.out);
+        }
+    }
+
+The setProperties method changes the set of system properties for the current running application. These changes are `not persistent`.
+
+####The Security Manager
+A security manager is an object that defines a security policy for an application. This policy specifies actions that are unsafe or sensitive. Any actions not allowed by the security policy cause a `SecurityException` to be thrown.
+
+#####Interacting with the Security Manager
+    SecurityManager appsm = System.getSecurityManager();
+
+#####Recognizing a Security Violation
+    reader = new FileReader("xanadu.txt");
+
+Suppose this statement is inserted in a web applet, which typically runs under a security manager that does not allow file input.
+
+####Miscellaneous Methods in System
+    arrayCopy method efficiently copies data between arrays.
+    currentTimeMillis and nanoTime method are useful for measuring time intervals during execution of an application.
+
+###PATH and CLASSPATH
+
+####Update the PATH Environment Variable (Microsoft Windows)
+    JAVA_HOME = C:\Java\jdk1.7.0
+    Path = %JAVA_HOME%\bin;%SystemRoot%\system32;%SystemRoot%;
+    
+    C:> java -version
+
+####Update the PATH Variable (Solaris and Linux)
+    PATH=/usr/local/jdk1.7.0/bin:
+    export PATH
+    
+    $ java -version
+
+####Checking the CLASSPATH variable (All platforms)
+    C:> echo %CLASSPATH%
+    
+    $ echo $CLASSPATH
+
+## Regular Expressions
+This lesson explains how to use the `java.util.regex` API for pattern matching with regular expressions. 
+
+###Introduction
+
+####What Are Regular Expressions?
+Regular expressions are a way to describe a set of strings based on common characteristics shared by each string in the set.
+
+####How Are Regular Expressions Represented in This Package?
+The `java.util.regex` package primarily consists of three classes: Pattern, Matcher, and PatternSyntaxException.
+
+    A Pattern object is a compiled representation of a regular expression.
+    A Matcher object is the engine expression as the first argument.
+    A PatternSyntaxException object is an unchecked exception that indicates a syntax error in a regular expression pattern.
+
+###Test Harness
+    import java.io.Console;
+    import java.util.regex.Pattern;
+    import java.util.regex.Matcher;
+
+    public class RegexTestHarness {
+
+        public static void main(String[] args){
+            Console console = System.console();
+            if (console == null) {
+                System.err.println("No console.");
+                System.exit(1);
+            }
+            while (true) {
+
+                Pattern pattern = 
+                Pattern.compile(console.readLine("%nEnter your regex: "));
+
+                Matcher matcher = 
+                pattern.matcher(console.readLine("Enter input string to search: "));
+
+                boolean found = false;
+                while (matcher.find()) {
+                    console.format("I found the text" +
+                        " \"%s\" starting at " +
+                        "index %d and ending at index %d.%n",
+                        matcher.group(),
+                        matcher.start(),
+                        matcher.end());
+                    found = true;
+                }
+                if(!found){
+                    console.format("No match found.%n");
+                    break;
+                }
+            }
+        }
+    }
+
+###String Literals
+By convention, ranges are inclusive of the beginning index and exclusive of the end index.
+
+####Metacharacters
+The metacharacters supported by this API are: `<([{\^-=$!|]})?*+.>` There are two ways to force a metacharacter to be treated as an ordinary character:
+
+    precede the metacharacter with a backslash, or
+    enclose it within \Q (which starts the quote) and \E (which ends it).
+
+###Character Classes
+supported regular expression constructs:
+
+    Construct 	    Description
+    [abc] 	        a, b, or c (simple class)
+    [^abc] 	        Any character except a, b, or c (negation)
+    [a-zA-Z] 	    a through z, or A through Z, inclusive (range)
+    [a-d[m-p]] 	    a through d, or m through p: [a-dm-p] (union)
+    [a-z&&[def]] 	d, e, or f (intersection)
+    [a-z&&[^bc]] 	a through z, except for b and c: [ad-z] (subtraction)
+    [a-z&&[^m-p]] 	a through z, and not m through p: [a-lq-z] (subtraction)
+
+####Negation
+To match all characters except those listed, insert the `^` metacharacter at the beginning of the character class.
+
+####Ranges
+To specify a range, simply insert the `-` metacharacter between the first and last character to be matched, such as `[1-5] or [a-h] or [a-zA-Z]`.
+
+####Unions
+To create a union, simply nest one class inside the other, such as `[0-4[6-8]]`.
+
+####Intersections
+To create a single character class matching only the characters common to all its nested classes, use `&&`, as in `[0-9&&[345]]`.
+
+####Subtraction
+Finally, you can use subtraction to negate one or more nested characters classes, such as `[0-9&&[^345]]`. This example creates a single character class that matches everything from 0 to 9, except the numbers 3, 4, and 5.
+
+###Predefined Characters Classes
+    Construct 	Description
+    . 	        Any character (may or may not match line terminators)
+    \d 	        A digit: [0-9]
+    \D 	        A non-digit: [^0-9]
+    \s 	        A whitespace character: [ \t\n\x0B\f\r]
+    \S 	        A non-whitespace character: [^\s]
+    \w 	        A word character: [a-zA-Z_0-9]
+    \W 	        A non-word character: [^\w]
+
+###Quantifiers
+    Greedy 	Reluctant 	Possessive 	Meaning
+    X? 	    X?? 	    X?+ 	    X, once or not at all
+    X* 	    X*? 	    X*+ 	    X, zero or more times
+    X+ 	    X+? 	    X++ 	    X, one or more times
+    X{n} 	X{n}? 	    X{n}+ 	    X, exactly n times
+    X{n,} 	X{n,}? 	    X{n,}+ 	    X, at least n times
+    X{n,m} 	X{n,m}? 	X{n,m}+ 	X, at least n but not more than m times
+
+####Zero-Length Matches
+A zero-length match can occur in several cases: in an empty input string, at the beginning of an input string, after the last character of an input string, or in between any two characters of an input string.
+
+####Capturing Groups and Character Classes with Quantifiers
+    (abc)+ the group "abc", one or more times.
+
+####Differences Among Greedy, Reluctant, and Possessive Quantifiers
+    Greedy quantifiers are considered "greedy" because they force the matcher to read in, or eat, the entire input string prior to attempting the first match.
+    
+    The reluctant quantifiers, however, take the opposite approach: They start at the beginning of the input string, then reluctantly eat one character at a time looking for a match.
+    
+    Finally, the possessive quantifiers always eat the entire input string, trying once (and only once) for a match.
+
+###Capturing Groups
+Capturing groups are a way to treat multiple characters as a single unit. They are created by placing the characters to be grouped inside a set of parentheses.
+
+####Numbering
+Capturing groups are numbered by counting their opening parentheses from left to right. To find out how many groups are present in the expression, call the groupCount method on the matcher object.
+
+####Backreferences
+A backreferences is specified in the regular expression as a backslash `(\)` followed by a digit indicating the number of the group to be recalled.
+
+###Boundary Matchers
+    Boundary Construct 	Description
+    ^ 	                The beginning of a line
+    $ 	                The end of a line
+    \b 	                A word boundary
+    \B 	                A non-word boundary
+    \A 	                The beginning of the input
+    \G 	                The end of the previous match
+    \Z 	                The end of the input but for the final terminator, if any
+    \z 	                The end of the input
+
+###Methods of the Pattern Class
+
+####Creating a Pattern with Flags
+    Pattern.CANON_EQ Enables canonical equivalence.
+    Pattern.CASE_INSENSITIVE Enables case-insensitive matching.
+    Pattern.COMMENTS Permits whitespace and comments in the pattern.
+    Pattern.DOTALL Enables dotall mode.
+    Pattern.LITERAL Enables literal parsing of the pattern.
+    Pattern.MULTILINE Enables multiline mode.
+    Pattern.UNICODE_CASE Enables Unicode-aware case folding.
+    Pattern.UNIX_LINES Enables Unix lines mode.
+
+    Pattern pattern = 
+    Pattern.compile(console.readLine("%nEnter your regex: "),
+    Pattern.CASE_INSENSITIVE);
+
+    pattern = Pattern.compile("[az]$", Pattern.MULTILINE | Pattern.UNIX_LINES);
+    
+    final int flags = Pattern.CASE_INSENSITIVE | Pattern.UNICODE_CASE;
+    Pattern pattern = Pattern.compile("aa", flags);
+
+####Embedded Flag Expressions
+    Constant 	                Equivalent Embedded Flag Expression
+    Pattern.CANON_EQ 	        None
+    Pattern.CASE_INSENSITIVE 	(?i)
+    Pattern.COMMENTS 	        (?x)
+    Pattern.MULTILINE 	        (?m)
+    Pattern.DOTALL 	            (?s)
+    Pattern.LITERAL 	        None
+    Pattern.UNICODE_CASE 	    (?u)
+    Pattern.UNIX_LINES 	        (?d)
+
+####Using the matches \(String, CharSequence\) Method
+    Pattern.matches("\\d", "1");        //returns true
+
+####Using the split \(String\) Method
+    import java.util.regex.Pattern;
+    import java.util.regex.Matcher;
+
+    public class SplitDemo {
+
+        private static final String REGEX = ":";
+        private static final String INPUT =
+            "one:two:three:four:five";
+        
+        public static void main(String[] args) {
+            Pattern p = Pattern.compile(REGEX);
+            String[] items = p.split(INPUT);
+            for(String s : items) {
+                System.out.println(s);
+            }
+        }
+    }
+
+####Other Utility Methods
+    public static String quote(String s) Returns a literal pattern String for the specified String.
+    public String toString() Returns the String representation of this pattern.
+
+####Pattern Method Equivalents in java.lang.String
+    public boolean matches(String regex): Tells whether or not this string matches the given regular expression.
+    public String[] split(String regex, int limit): Splits this string around matches of the given regular expression.
+    public String[] split(String regex): Splits this string around matches of the given regular expression.
+    public String replace(CharSequence target,CharSequence replacement): Replaces each substring of this string that matches the literal target sequence with the specified literal replacement sequence. 
+
+###Methods of the Matcher Class
+
+####Index Methods
+    public int start(): Returns the start index of the previous match.
+    public int start(int group): Returns the start index of the subsequence captured by the given group during the previous match operation.
+    public int end(): Returns the offset after the last character matched.
+    public int end(int group): Returns the offset after the last character of the subsequence captured by the given group during the previous match operation.
+
+####Study Methods
+    public boolean lookingAt(): Attempts to match the input sequence, starting at the beginning of the region, against the pattern.
+    public boolean find(): Attempts to find the next subsequence of the input sequence that matches the pattern.
+    public boolean find(int start): Resets this matcher and then attempts to find the next subsequence of the input sequence that matches the pattern, starting at the specified index.
+    public boolean matches(): Attempts to match the entire region against the pattern.
+
+####Replacement Methods
+
+    public Matcher appendReplacement(StringBuffer sb, String replacement): Implements a non-terminal append-and-replace step.
+    public StringBuffer appendTail(StringBuffer sb): Implements a terminal append-and-replace step.
+    public String replaceAll(String replacement): Replaces every subsequence of the input sequence that matches the pattern with the given replacement string.
+    public String replaceFirst(String replacement): Replaces the first subsequence of the input sequence that matches the pattern with the given replacement string.
+    public static String quoteReplacement(String s): Returns a literal replacement String for the specified String.
+
+####Using the start and end Methods
+    import java.util.regex.Pattern;
+    import java.util.regex.Matcher;
+
+    public class MatcherDemo {
+
+        private static final String REGEX =
+            "\\bdog\\b";
+        private static final String INPUT =
+            "dog dog dog doggie dogg";
+
+        public static void main(String[] args) {
+           Pattern p = Pattern.compile(REGEX);
+           //  get a matcher object
+           Matcher m = p.matcher(INPUT);
+           int count = 0;
+           while(m.find()) {
+               count++;
+               System.out.println("Match number "
+                                  + count);
+               System.out.println("start(): "
+                                  + m.start());
+               System.out.println("end(): "
+                                  + m.end());
+          }
+       }
+    }
+
+####Using the matches and lookingAt Methods
+    import java.util.regex.Pattern;
+    import java.util.regex.Matcher;
+
+    public class MatchesLooking {
+
+        private static final String REGEX = "foo";
+        private static final String INPUT =
+            "fooooooooooooooooo";
+        private static Pattern pattern;
+        private static Matcher matcher;
+
+        public static void main(String[] args) {
+       
+            // Initialize
+            pattern = Pattern.compile(REGEX);
+            matcher = pattern.matcher(INPUT);
+
+            System.out.println("Current REGEX is: "
+                               + REGEX);
+            System.out.println("Current INPUT is: "
+                               + INPUT);
+
+            System.out.println("lookingAt(): "
+                + matcher.lookingAt());
+            System.out.println("matches(): "
+                + matcher.matches());
+        }
+    }
+
+####Using replaceFirst\(String\) and replaceAll\(String\)
+    import java.util.regex.Pattern; 
+    import java.util.regex.Matcher;
+
+    public class ReplaceDemo {
+     
+        private static String REGEX = "dog";
+        private static String INPUT =
+            "The dog says meow. All dogs say meow.";
+        private static String REPLACE = "cat";
+     
+        public static void main(String[] args) {
+            Pattern p = Pattern.compile(REGEX);
+            // get a matcher object
+            Matcher m = p.matcher(INPUT);
+            INPUT = m.replaceAll(REPLACE);
+            System.out.println(INPUT);
+        }
+    }
+
+####Using appendReplacement\(StringBuffer, String\) and appendTail\(StringBuffer\)
+    import java.util.regex.Pattern;
+    import java.util.regex.Matcher;
+
+    public class RegexDemo {
+     
+        private static String REGEX = "a*b";
+        private static String INPUT = "aabfooaabfooabfoob";
+        private static String REPLACE = "-";
+     
+        public static void main(String[] args) {
+            Pattern p = Pattern.compile(REGEX);
+            Matcher m = p.matcher(INPUT); // get a matcher object
+            StringBuffer sb = new StringBuffer();
+            while(m.find()){
+                m.appendReplacement(sb,REPLACE);
+            }
+            m.appendTail(sb);
+            System.out.println(sb.toString());
+        }
+    }
+
+####Matcher Method Equivalents in java.lang.String
+    public String replaceFirst(String regex, String replacement): Replaces the first substring of this string that matches the given regular expression with the given replacement.
+    public String replaceAll(String regex, String replacement): Replaces each substring of this string that matches the given regular expression with the given replacement.
+
+###Methods of the PatternSyntaxException Class
+    public String getDescription(): Retrieves the description of the error.
+    public int getIndex(): Retrieves the error index.
+    public String getPattern(): Retrieves the erroneous regular expression pattern.
+    public String getMessage(): Returns a multi-line string containing the description of the syntax error and its index, the erroneous regular-expression pattern, and a visual indication of the error index within the pattern.
+
+####Demo
+    import java.io.Console;
+    import java.util.regex.Pattern;
+    import java.util.regex.Matcher;
+    import java.util.regex.PatternSyntaxException;
+
+    public class RegexTestHarness2 {
+
+        public static void main(String[] args){
+            Pattern pattern = null;
+            Matcher matcher = null;
+
+            Console console = System.console();
+            if (console == null) {
+                System.err.println("No console.");
+                System.exit(1);
+            }
+            while (true) {
+                try{
+                    pattern = 
+                    Pattern.compile(console.readLine("%nEnter your regex: "));
+
+                    matcher = 
+                    pattern.matcher(console.readLine("Enter input string to search: "));
+                }
+                catch(PatternSyntaxException pse){
+                    console.format("There is a problem" +
+                                   " with the regular expression!%n");
+                    console.format("The pattern in question is: %s%n",
+                                   pse.getPattern());
+                    console.format("The description is: %s%n",
+                                   pse.getDescription());
+                    console.format("The message is: %s%n",
+                                   pse.getMessage());
+                    console.format("The index is: %s%n",
+                                   pse.getIndex());
+                    System.exit(0);
+                }
+                boolean found = false;
+                while (matcher.find()) {
+                    console.format("I found the text" +
+                        " \"%s\" starting at " +
+                        "index %d and ending at index %d.%n",
+                        matcher.group(),
+                        matcher.start(),
+                        matcher.end());
+                    found = true;
+                }
+                if(!found){
+                    console.format("No match found.%n");
+                }
+            }
+        }
+    }
+
+###Unicode Support
+As of the JDK 7 release, Regular Expression pattern matching has expanded functionality to support Unicode 6.0.
+
+####Matching a Specific Code Point
+You can match a specific Unicode code point using an escape sequence of the form \uFFFF, where FFFF is the hexidecimal value of the code point you want to match. For example, \u6771 matches the Han character for east.
+
+    String hexPattern = "\x{" + Integer.toHexString(codePoint) + "}";
+
+####Unicode Character Properties
+Each Unicode character, in addition to its value, has certain attributes, or properties.
+
+    \p{prop} match a single character belonging to a particular category.
+    \P{prop} match a single character not belonging to a particular category.
+
+#####Scripts
+To determine if a code point belongs to a specific script, you can either use the script keyword, or the sc short form, for example, `\p{script=Hiragana}`. Alternatively, you can prefix the script name with the string `Is`, such as `\p{IsHiragana}`.
+
+#####Blocks
+A block can be specified using the block keyword, or the blk short form, for example, `\p{block=Mogolian}. Alternatively, you can prefix the block name with the string In`, such as `\p{InMongolian}`.
+
+#####General Category
+Categories can be specified with optional prefix `Is`. For example, `IsL` matches the category of Unicode letters. Categories can also be specified by using the `general_category` keyword, or the short form `gc`. For example, an uppercase letter can be matched using `general_category=Lu or gc=Lu`.
+
+###Additional Resources
+    Mastering Regular Expressions by Jeffrey E.F.Friedl.
 
 
+##-------------------------------------------------------------------------------------------------------
+# Collections
+
+## Introduction
+A collection -- sometimes called a container -- is simply and object that groups multiple elements into a single unit. Collections are used to store, retrieve, manipulate, and communicate aggregate data.
+
+###What Is a Collections Framework?
+A collections framework is a unified architecture for representing and manipulating collections. All collections frameworks contain the following:
+
+    Interfaces: These are abstract data types that represent collections.
+    Implementations: These are the concrete implementations of the collection interfaces.
+    Algorithms: These are the methods that perform useful computations, such as searching and sorting, on objects that implement collection interfaces.
+
+###Benefits of the Java Collections Framework
+    Reduces programming effort.
+    Increases program speed and quality
+    Allows interoperability among unrelated APIs
+    Reduces effort to learn and to use new APIs
+    Reduces effort to design new APIs
+    Fosters software reuse
+
+## Interfaces
+    Collection -- the root of the collection hierarchy. A collection represents a group of objects known as its elements.
+    Set -- a collection that cannot contain duplicate elements.
+    List -- an ordered collection (sometimes called a sequence).
+    Queue -- a collection used to hold multiple elements prior to processing.
+    Map -- an object that maps keys to values.
+    
+    SortedSet -- a Set that maintains its elements in ascending order.
+    SortedMap -- a Map that maintains its mappings in ascending key order.
+
+###The Collection Interface
+A collection represents a group of objects known as its elements.
+
+    public interface Collection<E> extends Iterable<E> {
+        // Basic operations
+        int size();
+        boolean isEmpty();
+        boolean contains(Object element);
+        // optional
+        boolean add(E element);
+        // optional
+        boolean remove(Object element);
+        Iterator<E> iterator();
+
+        // Bulk operations
+        boolean containsAll(Collection<?> c);
+        // optional
+        boolean addAll(Collection<? extends E> c); 
+        // optional
+        boolean removeAll(Collection<?> c);
+        // optional
+        boolean retainAll(Collection<?> c);
+        // optional
+        void clear();
+
+        // Array operations
+        Object[] toArray();
+        <T> T[] toArray(T[] a);
+    }
+
+####Traversing Collections
+    There are two ways to traverse collections: (1) with the for-each construct and (2) by using IteratorS.
+
+#####for-each Construct
+    for (Object o : collection)
+        System.out.println(o);
+
+#####Iterators
+    static void filter(Collection<?> c) {
+        for (Iterator<?> it = c.iterator(); it.hasNext(); )
+            if (!cond(it.next()))
+                it.remove();
+    }
+
+####Collection Interface Bulk Operations
+Bulk operations perform an operation on an entire Collection.
+
+    containsAll — returns true if the target Collection contains all of the elements in the specified Collection.
+    addAll — adds all of the elements in the specified Collection to the target Collection.
+    removeAll — removes from the target Collection all of its elements that are also contained in the specified Collection.
+    retainAll — removes from the target Collection all its elements that are not also contained in the specified Collection.
+    clear — removes all elements from the Collection.
+
+    c.removeAll(Collections.singleton(e));
+    c.removeAll(Collections.singleton(null));
+
+####Collection Interface Array Operations
+The toArray methods are provided as a bridge between collections and older APIs that expect arrays on input.
+
+    Object[] a = c.toArray();
+    String[] s = c.toArray(new String[0]);
+
+###The Set Interface
+A Set is a Collection that cannot contain duplicate elements. The Java platform contains three general-purpose Set implementations:
+
+    HashSet -- stores its elements in a hash table.
+    TreeSet -- stores its elements in a red-black tree, orders its elements based on their values.
+    LinkedHashSet -- is implemented as a hash table with a linked list running through it, orders its elements based on the order in which they were inserted into the set.
+
+    Collection<Type> noDups = new HashSet<Type>(c); //eliminate all duplicates
+    Collection<Type> noDups = new LinkedHashSet<Type>(c);
+
+####Set Interface Basic Operations
+    size -- returns the number of elements in the Set.
+    isEmpty -- returns true if empty.
+    add -- adds the specified element to the Set.
+    remove -- removes the specified element from the Set.
+    iterator -- returns an Iterator over the Set.
+
+    import java.util.*;
+
+    public class FindDups {
+        public static void main(String[] args) {
+            Set<String> s = new HashSet<String>();
+            for (String a : args)
+                if (!s.add(a))
+                    System.out.println("Duplicate detected: " + a);
+
+            System.out.println(s.size() + " distinct words: " + s);
+        }
+    }
+
+####Set Interface Bulk Operations
+    import java.util.*;
+
+    public class FindDups2 {
+        public static void main(String[] args) {
+            Set<String> uniques = new HashSet<String>();
+            Set<String> dups    = new HashSet<String>();
+
+            for (String a : args)
+                if (!uniques.add(a))
+                    dups.add(a);
+
+            // Destructive set-difference
+            uniques.removeAll(dups);
+
+            System.out.println("Unique words:    " + uniques);
+            System.out.println("Duplicate words: " + dups);
+        }
+    }
+
+####Set Interface Array Operations
+The array operations don't do anything special for Sets beyond what they do for any other Collection.
+
+###The List Interface
+A List is an ordered Collection \(sometimes called a sequence\). Lists may contain duplicate elements.
+
+    public interface List<E> extends Collection<E> {
+        // Positional access
+        E get(int index);
+        // optional
+        E set(int index, E element);
+        // optional
+        boolean add(E element); 
+        // optional
+        void add(int index, E element);
+        // optional
+        E remove(int index);
+        // optional
+        boolean addAll(int index, Collection<? extends E> c);
+
+        // Search
+        int indexOf(Object o);
+        int lastIndexOf(Object o);
+
+        // Iteration
+        ListIterator<E> listIterator();
+        ListIterator<E> listIterator(int index);
+
+        // Range-view
+        List<E> subList(int from, int to);
+    }
+
+####Comparison to Vector
+    a[i] = a[j].times(a[k]);    //array
+    v.setElementAt(v.elementAt(j).times(v.elementAt(k)), i);    //Vector
+    v.set(i, v.get(j).times(v.get(k)));     //List
+
+####Collection Oprerations
+The operations inherited from Collection all do about what you'd expect them to do.
+
+    list1.addAll(list2);
+
+    List<Type> list3 = new ArrayList<Type>(list1);
+    list3.addAll(list2);
+
+####Positional Access and Search Operations
+    The basic positional access operations (get, set, add and remove)
+    
+    public static <E> void swap(List<E> a, int i, int j) {
+        E tmp = a.get(i);
+        a.set(i, a.get(j));
+        a.set(j, tmp);
+    }
+
+    import java.util.*;
+
+    public class Shuffle {
+        public static void main(String[] args) {
+            List<String> list = new ArrayList<String>();
+            for (String a : args)
+                list.add(a);
+            Collections.shuffle(list, new Random());
+            System.out.println(list);
+        }
+    }
+
+####Iterators
+    public interface ListIterator<E> extends Iterator<E> {
+        boolean hasNext();
+        E next();
+        boolean hasPrevious();
+        E previous();
+        int nextIndex();
+        int previousIndex();
+        void remove(); //optional
+        void set(E e); //optional
+        void add(E e); //optional
+    }
+
+    for (ListIterator<Type> it = list.listIterator(list.size()); it.hasPrevious(); ) {
+        Type t = it.previous();
+        ...
+    }
+
+####Range-View Operation
+The range-view operation, subList(int fromIndex, int toIndex), returns a List view of the portion of this list whose indices range from fromIndex, inclusive, to toIndex, exclusive.
+
+    import java.util.*;
+
+    public class Deal {
+        public static void main(String[] args) {
+            if (args.length < 2) {
+                System.out.println("Usage: Deal hands cards");
+                return;
+            }
+            int numHands = Integer.parseInt(args[0]);
+            int cardsPerHand = Integer.parseInt(args[1]);
+        
+            // Make a normal 52-card deck.
+            String[] suit = new String[] {
+                "spades", "hearts", 
+                "diamonds", "clubs" 
+            };
+            String[] rank = new String[] {
+                "ace", "2", "3", "4",
+                "5", "6", "7", "8", "9", "10", 
+                "jack", "queen", "king" 
+            };
+
+            List<String> deck = new ArrayList<String>();
+            for (int i = 0; i < suit.length; i++)
+                for (int j = 0; j < rank.length; j++)
+                    deck.add(rank[j] + " of " + suit[i]);
+        
+            // Shuffle the deck.
+            Collections.shuffle(deck);
+        
+            if (numHands * cardsPerHand > deck.size()) {
+                System.out.println("Not enough cards.");
+                return;
+            }
+        
+            for (int i = 0; i < numHands; i++)
+                System.out.println(dealHand(deck, cardsPerHand));
+        }
+      
+        public static <E> List<E> dealHand(List<E> deck, int n) {
+            int deckSize = deck.size();
+            List<E> handView = deck.subList(deckSize - n, deckSize);
+            List<E> hand = new ArrayList<E>(handView);
+            handView.clear();
+            return hand;
+        }
+    }
+
+####List Algorithms
+
+    sort — sorts a List using a merge sort algorithm, which provides a fast, stable sort.
+    shuffle — randomly permutes the elements in a List.
+    reverse — reverses the order of the elements in a List.
+    rotate — rotates all the elements in a List by a specified distance.
+    swap — swaps the elements at specified positions in a List.
+    replaceAll — replaces all occurrences of one specified value with another.
+    fill — overwrites every element in a List with the specified value.
+    copy — copies the source List into the destination List.
+    binarySearch — searches for an element in an ordered List using the binary search algorithm.
+    indexOfSubList — returns the index of the first sublist of one List that is equal to another.
+    lastIndexOfSubList — returns the index of the last sublist of one List that is equal to another.
+
+###The Queue Interface
+A Queue is a collection for holding elements prior to processing.
+
+    public interface Queue<E> extends Collection<E> {
+        E element();
+        boolean offer(E e);
+        E peek();
+        E poll();
+        E remove();
+    }
+
+    import java.util.*;
+
+    public class Countdown {
+        public static void main(String[] args) throws InterruptedException {
+            int time = Integer.parseInt(args[0]);
+            Queue<Integer> queue = new LinkedList<Integer>();
+
+            for (int i = time; i >= 0; i--)
+                queue.add(i);
+
+            while (!queue.isEmpty()) {
+                System.out.println(queue.remove());
+                Thread.sleep(1000);
+            }
+        }
+    }
+
+###The Deque Interface
+Usually pronounced as deck, a deque is a double-ended-queue. Note that the Deque interface can be used both as last-in-first-out stacks and first-in-first-out queues. The methods given in the Deque interface are divided into three parts:
+
+####Insert
+    addFirst(e) insert elements at the beginning of the Deque instance.
+    addLast(e) insert elements at the end of the Deque instance.
+
+    offerFirst(e) insert elements at the beginning of the Deque instance.
+    offerLast(e) insert elements at the end of the Deque instance.
+
+When the capacity of the Deque instance is restricted, the preferred methods are offerFirst and offerLast because addFirst might fail to throw an exception if it is full.
+
+####Remove
+    removeFirst() remove elements from the beginning of the Deque instance.
+    removeLast()
+    
+    pollFirst()
+    pollLast() remove elements from the end.
+
+The methods pollFirst and pollLast return null if the Deque is empty whereas the methods removeFirst and removeLast throw an exception if the Deque instance is empty. 
+
+####Retrieve
+    getFirst() retrieve the first element of the Deque instance, don't remove the value from the Deque instance.
+    getLast()
+    
+    peekFirst()
+    peekLast() retrieve the last element.
+
+The methods getFirst and getLast throw an exception if the deque instance is empty whereas the methods peekFirst and peekLast return NULL.
+
+###The Map Interface
+A Map is an object that maps keys to values. A map cannot contain duplicate keys: Each key can map to at most one value.
+
+    public interface Map<K,V> {
+
+        // Basic operations
+        V put(K key, V value);
+        V get(Object key);
+        V remove(Object key);
+        boolean containsKey(Object key);
+        boolean containsValue(Object value);
+        int size();
+        boolean isEmpty();
+
+        // Bulk operations
+        void putAll(Map<? extends K, ? extends V> m);
+        void clear();
+
+        // Collection Views
+        public Set<K> keySet();
+        public Collection<V> values();
+        public Set<Map.Entry<K,V>> entrySet();
+
+        // Interface for entrySet elements
+        public interface Entry {
+            K getKey();
+            V getValue();
+            V setValue(V value);
+        }
+    }
+
+####Comparison to Hashtable
+Map is an interface, while Hashtable is a concrete implementation. The following are the major differences:
+
+    Map provides Collection views instead of direct support for iteration via Enumeration objects. Collection views greatly enhance the expressiveness of the interface, as discussed later in this section.
+    Map allows you to iterate over keys, values, or key-value pairs; Hashtable does not provide the third option.
+    Map provides a safe way to remove entries in the midst of iteration; Hashtable did not.
+
+####Map Interface Basic Operations
+The basic operations of Map `(put, get, containsKey, containsValue, size, and isEmpty)` behave exactly like their counterparts in Hashtable. 
+
+    import java.util.*;
+
+    public class Freq {
+        public static void main(String[] args) {
+            Map<String, Integer> m = new HashMap<String, Integer>();
+
+            // Initialize frequency table from command line
+            for (String a : args) {
+                Integer freq = m.get(a);
+                m.put(a, (freq == null) ? 1 : freq + 1);
+            }
+
+            System.out.println(m.size() + " distinct words:");
+            System.out.println(m);
+        }
+    }
+
+####Map Interface Bulk Operations
+    clear() removes all the mappings from the Map.
+    putAll() dumps one Map into another.
+
+    static <K, V> Map<K, V> newAttributeMap(Map<K, V>defaults, Map<K, V> overrides) {
+        Map<K, V> result = new HashMap<K, V>(defaults);
+        result.putAll(overrides);
+        return result;
+    }
+
+####Collection Views
+The Collection view methods allow a Map to be viewed as a Collection in these three ways:
+
+    keySet — the Set of keys contained in the Map.
+    values — The Collection of values contained in the Map. This Collection is not a Set, because multiple keys can map to the same value.
+    entrySet — the Set of key-value pairs contained in the Map. The Map interface provides a small nested interface called Map.Entry, the type of the elements in this Set.
+
+    for (KeyType key : m.keySet())
+        System.out.println(key);
+        
+    for (Iterator<Type> it = m.keySet().iterator(); it.hasNext(); )
+        if (it.next().isBogus())
+            it.remove();
+    
+    for (Map.Entry<KeyType, ValType> e : m.entrySet())
+        System.out.println(e.getKey() + ": " + e.getValue());
+
+####Fancy Uses of Collection Views: Map Algebra
+    //whether the first Map contains all the key-value mappings in the second
+    if (m1.entrySet().containsAll(m2.entrySet())) {
+        ...
+    }
+    
+    //whether two Map objects contain mappings for all of the same keys.
+    if (m1.keySet().equals(m2.keySet())) {
+        ...
+    }
+
+####Multimaps
+A multimap is like a Map but it can map each key to multiple values.
+
+    import java.util.*;
+    import java.io.*;
+
+    public class Anagrams {
+        public static void main(String[] args) {
+            int minGroupSize = Integer.parseInt(args[1]);
+
+            // Read words from file and put into a simulated multimap
+            Map<String, List<String>> m = new HashMap<String, List<String>>();
+
+            try {
+                Scanner s = new Scanner(new File(args[0]));
+                while (s.hasNext()) {
+                    String word = s.next();
+                    String alpha = alphabetize(word);
+                    List<String> l = m.get(alpha);
+                    if (l == null)
+                        m.put(alpha, l=new ArrayList<String>());
+                    l.add(word);
+                }
+            } catch (IOException e) {
+                System.err.println(e);
+                System.exit(1);
+            }
+
+            // Print all permutation groups above size threshold
+            for (List<String> l : m.values())
+                if (l.size() >= minGroupSize)
+                    System.out.println(l.size() + ": " + l);
+        }
+
+        private static String alphabetize(String s) {
+            char[] a = s.toCharArray();
+            Arrays.sort(a);
+            return new String(a);
+        }
+    }
+
+###Object Ordering
+A List l may be sorted as follows.
+
+    Collections.sort(l);
+
+####Writing Your Own Comparable Types
+    public interface Comparable<T> {
+        public int compareTo(T o);
+    }
+
+    import java.util.*;
+
+    public class Name implements Comparable<Name> {
+        private final String firstName, lastName;
+
+        public Name(String firstName, String lastName) {
+            if (firstName == null || lastName == null)
+                throw new NullPointerException();
+            this.firstName = firstName;
+            this.lastName = lastName;
+        }
+
+        public String firstName() { return firstName; }
+        public String lastName()  { return lastName;  }
+
+        public boolean equals(Object o) {
+            if (!(o instanceof Name))
+                return false;
+            Name n = (Name) o;
+            return n.firstName.equals(firstName) && n.lastName.equals(lastName);
+        }
+
+        public int hashCode() {
+            return 31*firstName.hashCode() + lastName.hashCode();
+        }
+
+        public String toString() {
+	    return firstName + " " + lastName;
+        }
+
+        public int compareTo(Name n) {
+            int lastCmp = lastName.compareTo(n.lastName);
+            return (lastCmp != 0 ? lastCmp : firstName.compareTo(n.firstName));
+        }
+    }
+
+    import java.util.*;
+
+    public class NameSort {
+        public static void main(String[] args) {
+            Name nameArray[] = {
+                new Name("John", "Smith"),
+                new Name("Karl", "Ng"),
+                new Name("Jeff", "Smith"),
+                new Name("Tom", "Rich")
+            };
+
+            List<Name> names = Arrays.asList(nameArray);
+            Collections.sort(names);
+            System.out.println(names);
+        }
+    }
+
+####Comparators
+    public interface Comparator<T> {
+        int compare(T o1, T o2);
+    }
+
+###The SortedSet Interface
+A SortedSet is a Set that maintains its elements in ascending order, sorted according to the elements' natural ordering or according to a Comparator provided at SortedSet creation time.
+
+    public interface SortedSet<E> extends Set<E> {
+        // Range-view
+        SortedSet<E> subSet(E fromElement, E toElement);
+        SortedSet<E> headSet(E toElement);
+        SortedSet<E> tailSet(E fromElement);
+
+        // Endpoints
+        E first();
+        E last();
+
+        // Comparator access
+        Comparator<? super E> comparator();
+    }
+
+####Set Operations
+The operations that SortedSet inherits from Set behave identically on sorted sets and normal sets with two exceptions:
+
+    The Iterator returned by the iterator operation traverses the sorted set in order.
+    The array returned by toArray contains the sorted set's elements in order.
+
+####Standard Constructors
+By convention, all general-purpose Collection implementations provide a standard conversion constructor that takes a Collection; SortedSet implementations are no exception.
+
+####Range-view Operations
+    //including "doorbell" but excluding "pickle"
+    int count = dictionary.subSet("doorbell", "pickle").size();
+
+    //including doorbell and pickle
+    count = dictionary.subSet("doorbell", "pickle\0").size();
+
+    //excluding both
+    count = dictionary.subSet("doorbell\0", "pickle").size();
+
+    SortedSet<String> volume1 = dictionary.headSet("n");    //n-z
+    SortedSet<String> volume2 = dictionary.tailSet("n");    //a-m
+
+####Endpoint Operations
+The SortedSet interface contains operations to return the first and last elements in the sorted set, not surprisingly called first and last.
+
+    Object predecessor = ss.headSet(o).last();
+
+####Comparator Accessor
+The SortedSet interface contains an accessor method called comparator that returns the Comparator used to sort the set, or null if the set is sorted according to the natural ordering of its elements.
+
+###The SortedMap Interface
+A SortedMap is a Map that maintains its entries in ascending order, sorted according to the keys' natural ordering, or according to a Comparator provided at the time of the SortedMap creation.
+
+    public interface SortedMap<K, V> extends Map<K, V>{
+        Comparator<? super K> comparator();
+        SortedMap<K, V> subMap(K fromKey, K toKey);
+        SortedMap<K, V> headMap(K toKey);
+        SortedMap<K, V> tailMap(K fromKey);
+        K firstKey();
+        K lastKey();
+    }
+
+####Map Operations
+The operations SortedMap inherits from Map behave identically on sorted maps and normal maps with two exceptions:
+
+    The Iterator returned by the iterator operation on any of the sorted map's Collection views traverse the collections in order.
+    The arrays returned by the Collection views' toArray operations contain the keys, values, or entries in order.
+
+####Standard Constructors
+By convention, all general-purpose Map implementations provide a standard conversion constructor that takes a Map; SortedMap implementations are no exception.
+
+## Bulk Data Operations
+Need JDK8 snapshot to support.
+
+    roster
+        .stream()
+        .forEach(e -> System.out.println(e.getName());
+
+###Reduction
+
+####The Stream.reduce Method
+    Integer totalAgeReduce = roster
+       .stream()
+       .map(Person::getAge)
+       .reduce(
+           0,
+           (a, b) -> a + b);
+
+####The Stream.collect Method
+    class Averager implements IntConsumer
+    {
+        private int total = 0;
+        private int count = 0;
+            
+        public double average() {
+            return count > 0 ? ((double) total)/count : 0;
+        }
+            
+        public void accept(int i) { total += i; count++; }
+        public void combine(Averager other) {
+            total += other.total;
+            count += other.count;
+        }
+    }
+    Averager averageCollect = roster.stream()
+        .filter(p -> p.getGender() == Person.Sex.MALE)
+        .map(Person::getAge)
+        .collect(Averager::new, Averager::accept, Averager::combine);
+                       
+    System.out.println("Average age of male members: " +
+        averageCollect.average());
+
+## Implementations
+Implementations are the data objects used to store collections, which implement the interfaces.
+
+    General-purpose implementations are the most commonly used implementations, designed for everyday use. They are summarized in the table titled General-purpose-implementations.
+    Special-purpose implementations are designed for use in special situations and display nonstandard performance characteristics, usage restrictions, or behavior.
+    Concurrent implementations are designed to support high concurrency, typically at the expense of single-threaded performance. These implementations are part of the java.util.concurrent package.
+    Wrapper implementations are used in combination with other types of implementations, often the general-purpose ones, to provide added or restricted functionality.
+    Convenience implementations are mini-implementations, typically made available via static factory methods, that provide convenient, efficient alternatives to general-purpose implementations for special collections (for example, singleton sets).
+    Abstract implementations are skeletal implementations that facilitate the construction of custom implementations — described later in the Custom Collection Implementations section. An advanced topic, it's not particularly difficult, but relatively few people will need to do it.
+
+###Set Implementations
+The Set implementations are grouped into general-purpose and special-purpose implementations.
+
+####General-Purpose Set Implementations
+There are three general-purpose Set implementations -- HashSet, TreeSet, and LinkedHashSet.
+
+####Special-Purpose Set Implementations
+There are two special-purpose Set implementations -- EnumSet and CopyOnWriteArraySet.
+
+###List Implementations
+List implementations are grouped into general-purpose and special-purpose implementations.
+
+####General-Purpose List Implementations
+There are two general-purpose List implementations -- ArrayList and LinkedList.
+
+####Special-Purpose List Implementations
+CopyOnWriteArrayList is a List implementation backed up by a copy-on-write array.
+
+###Map Implementations
+Map implementations are grouped into general-purpose, special-purpose, and concurrent implementations.
+
+####General-Purpose Map Implementations
+The three general-purpose Map implementations are HashMap, TreeMap and LinkedHashMap.
+
+####Special-Purpose Map Implementations
+There are three special-purpose Map implementations -- EnumMap, WeakHashMap and IdentityHashMap.
+
+####Concurrent Map Implementations
+The java.util.concurrent package contains the ConcurrentMap interface, which extends Map with atomic putIfAbsent, remove, and replace methods, and the ConcurrentHashMap implementation of that interface.
+
+###Queue Implementations
+The Queue implementations are grouped into general-purpose and concurrent implementations.
+
+####General-Purpose Queue Implementations
+The queue retrieval operations — poll, remove, peek, and element — access the element at the head of the queue.
+
+####Concurrent Queue Implementations
+This interface is implemented by the following classes:
+
+    LinkedBlockingQueue — an optionally bounded FIFO blocking queue backed by linked nodes
+    ArrayBlockingQueue — a bounded FIFO blocking queue backed by an array
+    PriorityBlockingQueue — an unbounded blocking priority queue backed by a heap
+    DelayQueue — a time-based scheduling queue backed by a heap
+    SynchronousQueue — a simple rendezvous mechanism that uses the BlockingQueue interface
+
+    In JDK 7, TransferQueue is a specialized BlockingQueue in which code that adds an element to the queue has the option of waiting (blocking) for code in another thread to retrieve the element. TransferQueue has a single implementation:
+
+    LinkedTransferQueue — an unbounded TransferQueue based on linked nodes
+
+###Deque Implementations
+The Deque interface, pronounced as "deck", represents a double-ended queue.
+
+####General-Purpose Deque Implementations
+The general-purpose implementations include LinkedList and ArrayDeque classes.
+
+For the ArrayDeque instance traversal use any of the following:
+#####foreach
+    ArrayDeque<String> aDeque = new ArrayDeque<String>();
+    . . .
+    for (String str : aDeque) {
+        System.out.println(str);
+    }
+
+#####Iterator
+    ArrayDeque<String> aDeque = new ArrayDeque<String>();
+    . . .
+    for (Iterator<String> iter = aDeque.iterator(); iter.hasNext();  ) {
+        System.out.println(iter.next());
+    }
+
+####Concurrent Deque Implementations
+The LinkedBlockingDeque class is the concurrent implementation of the Deque interface.
+
+###Wrapper Implementations
+Wrapper implementations delegate all their real work to a specified collection but add extra functionality on top of what this collection offers.
+
+####Synchronization Wrappers
+The synchronization wrappers add automatic synchronization \(thread-safety\) to an arbitrary collection.
+
+    public static <T> Collection<T> synchronizedCollection(Collection<T> c);
+    public static <T> Set<T> synchronizedSet(Set<T> s);
+    public static <T> List<T> synchronizedList(List<T> list);
+    public static <K,V> Map<K,V> synchronizedMap(Map<K,V> m);
+    public static <T> SortedSet<T> synchronizedSortedSet(SortedSet<T> s);
+    public static <K,V> SortedMap<K,V> synchronizedSortedMap(SortedMap<K,V> m);
+
+####Unmodifiable Wrappers
+The unmodifiable wrappers take functionality away.
+
+    public static <T> Collection<T> unmodifiableCollection(Collection<? extends T> c);
+    public static <T> Set<T> unmodifiableSet(Set<? extends T> s);
+    public static <T> List<T> unmodifiableList(List<? extends T> list);
+    public static <K,V> Map<K, V> unmodifiableMap(Map<? extends K, ? extends V> m);
+    public static <T> SortedSet<T> unmodifiableSortedSet(SortedSet<? extends T> s);
+    public static <K,V> SortedMap<K, V> unmodifiableSortedMap(SortedMap<K, ? extends V> m);
+
+####Checked Interface Wrappers
+The Collections.checked interface wrappers are provided for use with generic collections.
+
+###Convenience Implementations
+All the implementations in this section are made available via static factory methods rather than public classes.
+
+####List View an Array
+The Arrays.asList method returns a List view of its array argument.
+
+    List<String> list = Arrays.asList(new String[size]);
+
+####Immutable Multiple-Copy List
+The Collections.nCopies method returns an immutable List consisting of multiple copies of the same element.
+
+    List<Type> list = new ArrayList<Type>(Collections.nCopies(1000, (Type)null);
+
+####Immutable Singleton Set
+The Collections.singleton method returns an immutable singleton Set, which consists of a single, specified element.
+
+    c.removeAll(Collections.singleton(e));
+
+####Empty Set, List, and Map Constants
+The Collections class provides methods to return the empty Set, List, and Map — emptySet, emptyList, and emptyMap.
+
+    tourist.declarePurchases(Collections.emptySet());
+
+## Algorithms
+The polymorphic algorithms described here are pieces of reusable functionality provided by the Java platform.
+
+###Sorting
+The sort algorithm reorders a List so that its elements are in ascending order according to an ordering relationship. The sort operation uses a slightly optimized merge sort algorithm that is fast and stable.
+
+    import java.util.*;
+
+    public class Sort {
+        public static void main(String[] args) {
+            List<String> list = Arrays.asList(args);
+            Collections.sort(list);
+            System.out.println(list);
+        }
+    }
+
+###Shuffling
+The shuffle algorithm does the opposite of what sort does, destroying any trace of order that may have been present in a List.
+
+###Routine Data Manipulation
+The Collections class provides five algorithms for doing routine data manipulation on List objects, all of which are pretty straightforward:
+
+    reverse — reverses the order of the elements in a List.
+    fill — overwrites every element in a List with the specified value. This operation is useful for reinitializing a List.
+    copy — takes two arguments, a destination List and a source List, and copies the elements of the source into the destination, overwriting its contents. The destination List must be at least as long as the source. If it is longer, the remaining elements in the destination List are unaffected.
+    swap — swaps the elements at the specified positions in a List.
+    addAll — adds all the specified elements to a Collection. The elements to be added may be specified individually or as an array.
+
+###Searching
+The binarySearch algorithm searches for a specified element in a sorted List.
+
+###Composition
+The frequency and disjoint algorithms test some aspect of the composition of one or more Collections:
+
+    frequency — counts the number of times the specified element occurs in the specified collection
+    disjoint — determines whether two Collections are disjoint; that is, whether they contain no elements in common
+
+###Finding Extreme Values
+The min and the max algorithms return, respectively, the minimum and maximum element contained in a specified Collection.
+
+##Custom Collection Implementations
+
+###Reasons to Write an Implementation
+
+    Persistent: All of the built-in Collection implementations reside in main memory and vanish when the program exits.
+    Application-specific: This is a very broad category.
+    High-performance, special-purpose: Many data structures take advantage of restricted usage to offer better performance than is possible with general-purpose implementations.
+    High-performance, general-purpose: The Java Collections Framework's designers tried to provide the best general-purpose implementations for each interface, but many, many data structures could have been used, and new ones are invented every day.
+    Enhanced functionality: Suppose you need an efficient bag implementation (also known as a multiset): a Collection that offers constant-time containment checks while allowing duplicate elements.
+    Convenience: You may want additional implementations that offer conveniences beyond those offered by the Java platform.
+    Adapter: Suppose you are using a legacy API that has its own ad hoc collections' API. You can write an adapter implementation that permits these collections to operate in the Java Collections Framework.
+
+###How to Write a Custom Implementation
+The following list summarizes the abstract implementations:
+
+    AbstractCollection — a Collection that is neither a Set nor a List.
+    AbstractSet — a Set; use is identical to AbstractCollection.
+    AbstractList — a List backed up by a random-access data store, such as an array.
+    AbstractSequentialList — a List backed up by a sequential-access data store, such as a linked list.
+    AbstractQueue — at a minimum, you must provide the offer, peek, poll, and size methods and an iterator supporting remove.
+    AbstractMap — a Map. At a minimum you must provide the entrySet view.
+
+The process of writing a custom implementation follows:
+
+    Choose the appropriate abstract implementation class from the preceding list.
+    Provide implementations for all the abstract methods of the class.
+    Test and, if necessary, debug the implementation. You now have a working custom collection implementation.
+    If you are concerned about performance, read the API documentation of the abstract implementation class for all the methods whose implementations you're inheriting.
+
+##Interoperability
+
+###Compatibility
+
+####Upward Compatibility
+    Foo[] result = oldMethod(arg);
+    newMethod(Arrays.asList(result));
+
+####Backward Compatibility
+    Collection c = newMethod();
+    oldMethod(c.toArray());
+
+##API Design
+
+###Parameters
+Declare the relevant parameter type to be one of the collection interface types. Never use an implementation type because this defeats the purpose of an interface-based Collections Framework. Use the least-specific type that makes sense.
+
+###Return Values
+You can afford to be much more flexible with return values than with input parameters.
+
+###Legacy APIs
+If possible, retrofit your legacy collection type to implement one of the standard collection interfaces.
+
+##-------------------------------------------------------------------------------------------------------
+
+##Java Applets
+An applet must be a subclass of the java.applet.Applet class. Swing provides a special subclass of the Applet class called javax.swing.JApplet.
+
+###Getting Started With Applets
+The HelloWorld applet shown next is a Java class that displays the string "Hello World".
+
+####Defining an Applet Subclass
+Every Java applet must define a subclass of the Applet or JApplet class.
+    
+    package com.cbay;
+    
+    import javax.swing.JApplet;
+    import javax.swing.SwingUtilities;
+    import javax.swing.JLabel;
+
+    public class HelloApplet extends JApplet {
+        //Called when this applet is loaded into the browser.
+        public void init() {
+            //Execute a job on the event-dispatching thread; creating this applet's GUI.
+            try {
+                SwingUtilities.invokeAndWait(new Runnable() {
+                    public void run() {
+                        JLabel lbl = new JLabel("Hello World");
+                        add(lbl);
+                    }
+                });
+            } catch (Exception e) {
+                System.err.println("createGUI didn't complete successfully");
+            }
+        }
+    }
+
+####Methods for Milestones
+Milestones are major events in an applet's life cycle.
+
+#####init Method
+The init method is useful for one-time initialization that doesn't take very long.
+
+#####start Method
+The start method starts the execution of the applet.
+
+#####stop Method
+The stop method should suspend the applet's execution.
+
+#####destroy Method
+The destroy method is available for applets that need to release additional resources.
+
+####Life Cycle of an Applet
+
+    It can initialize itself.
+    It can start running.
+    It can stop running.
+    It can perform a final cleanup, in preparation for being unloaded.
+
+Unlike Java applications, applets do not need to implement a main method.
+
+####Applet's Execution Environment
+A Java applet runs in the context of a browser.
+
+#####Java Plug-in
+The Java Plug-in software creates a worker thread for every Java applet.
+
+#####Java Plug-in and JavaScript Interpreter Interaction
+Java applets can invoke JavaScript functions present in the web page.
+
+####Developing an Applet
+An application designed using component-based architecture can be developed into a Java applet.
+
+####Deploying an Applet
+Java applets can be launched in two ways.
+
+    You can launch an applet by specifying the applet's launch properties directly in the applet tag. This old way of deploying applets imposes severe security restrictions on the applet.
+    Alternatively, you can launch your applet by using Java Network Launch Protocol (JNLP). Applets launched by using JNLP have access to powerful JNLP APIs and extensions.
+
+## Packaging Progrmas in JAR Files
+The Java Archive \(JAR\) file format enables you to bundle multiple files into a single archive file.
+
+###Using JAR Files
+    Usage: jar {ctxui}[vfm0Me] [jar-file] [manifest-file] [entry-point] [-C dir] files ...
+    Options:
+    -c  create new archive
+    -t  list table of contents for archive
+    -x  extract named (or all) files from archive
+    -u  update existing archive
+    -v  generate verbose output on standard output
+    -f  specify archive file name
+    -m  include manifest information from specified manifest file
+    -e  specify application entry point for stand-alone application 
+        bundled into an executable jar file
+    -0  store only; use no ZIP compression
+    -M  do not create a manifest file for the entries
+    -i  generate index information for the specified jar files
+    -C  change to the specified directory and include the following file
+
+If any file is a directory then it is processed recursively. The manifest file name, the archive file name and the entry point name are specified in the same order as the 'm', 'f' and 'e' flags.
+
+Example 1: to archive two class files into an archive called classes.jar:
+
+    jar cvf classes.jar Foo.class Bar.class 
+
+Example 2: use an existing manifest file 'mymanifest' and archive all the files in the foo/ directory into 'classes.jar': 
+
+    jar cvfm classes.jar mymanifest -C foo/ .
+
+####Creating a JAR File
+    jar cf jar-file input-file(s)
+    
+    jar cvf TicTacToe.jar TicTacToe.class audio images
+    jar cvf0 TicTacToe.jar TicTacToe.class audio images
+    jar cvf TicTacToe.jar *
+    jar cf ImageAudio.jar -C images . -C audio .
+    jar cf ImageAudio.jar images audio
+
+####Viewing the Contents of a JAR File
+    jar tf jar-file
+    
+    jar tf TicTacToe.jar
+    jar tvf TicTacToe.jar
+    
+####Extracting the Contents of a JAR File
+    jar xf jar-file [archived-file(s)]
+    
+    jar xf TicTacToe.jar TicTacToe.class images/cross.gif
+
+####Updating a JAR File
+    jar uf jar-file input-file(s)
+    
+    jar uf TicTacToe.jar images/new.gif
+    jar uf TicTacToe.jar -C images new.gif
+
+####Running JAR-Packaged Software
+
+#####Applets Pacakaged in JAR Files
+    <head>
+        <title>HelloApplet</title>
+    </head>
+    <body>
+        <applet id="HelloApplet"
+            name="HelloApplet"
+            codebase="applets/"
+            archive="TestApp.jar"
+            code="com.cbay.HelloApplet.class"
+            width="500" height="150"
+        </applet>
+    </body>
+    </html>
+
+#####JAR Files as Applications
+    java -jar jar-file
+    
+    $ java -jar TestApp.jar
+
+###Working with Manifest Files
+The manifest is a special file that can contain information about the files packaged in a JAR file.
+
+####Understanding the Default Manifest
+    META-INF/MANIFEST.MF
+    
+    Manifest-Version: 1.0
+    Created-By: 1.7.0_21 (Oracle Corporation)
+
+####Modifying a Manifest File
+    $ jar cfm jar-file manifest-addition input-file(s)
+    # The m and f options must be in the same order as the corresponding arguments.
+
+####Setting an Application's Entry Point
+    Main-Class: classname
+    
+    $ java -jar jar-file
+    # After you have set the Main-Class header in the manifest, you then run the JAR file.
+
+#####An Example
+    manifest.txt
+    Main-Class: TestApp
+    
+    $ jar cfm test.jar manifest.txt -C target .
+    $ jar -jar test.jar
+
+#####Setting an Entry Point with the JAR Tool
+    $ jar cfe test.jar TestApp -C tartet .
+    
+    $ jar cfe Main.jar foo.Main foo/Main.class
+
+####Adding Classes to the JAR File's Classpath
+    Class-Path: jar1-name jar2-name directory-name/jar3-name
+    
+    manifest.txt
+    Class-Path: MyUtils.jar
+    
+    $ jar cfm test.jar manifest.txt -C target .
+
+####Setting Package Version Information
+    Name: java/util/
+    Specification-Title: Java Utility Classes
+    Specification-Version: 1.2
+    Specification-Vendor: Example Tech, Inc.
+    Implementation-Title: java.util
+    Implementation-Version: build57
+    Implementation-Vendor: Example Tech, Inc.
+
+####Sealing Packages within a JAR File
+Packages within JAR files can be optionally sealed, which means that all classes defined in that package must be archived in the same JAR file.
+
+    Name: myCompany/myPackage/
+    Sealed: true
+
+####Enhancing the Security of the JAR File
+    Trusted-Only: true
+    Trusted-Library: true
+    Permissions: sandbox
+    Codebase: cbay.com.cn
+
+###Signing and Verifying JAR Files
+
+####Understanding Signing and Verification
+When you digitally sign a file, anyone who "recognizes" your digital signature knows that the file came from you. The process of "recognizing" electronic signatures is called verification. To summarize digital signing:
+
+    The signer signs the JAR file using a private key.
+    The corresponding public key is placed in the JAR file, together with its certificate, so that it is available for use by anyone who wants to verify the signature.
+
+#####Digests and the Signature File
+    Signature-Version: 1.0
+    SHA1-Digest-Manifest: h1yS+K9T7DyHtZrtI+LxvgqaMYM=
+    Created-By: 1.7.0_06 (Oracle Corporation)
+
+    Name: test/classes/ClassOne.class
+    SHA1-Digest: fcav7ShIG6i86xPepmitOVo4vWY=
+
+#####The Signature Block File
+The signature block file contains two elements essential for verification:
+
+    The digital signature for the JAR file that was generated with the signer's private key
+    The certificate containing the signer's public key, to be used by anyone wanting to verify the signed JAR file
+
+####Signing JAR Files
+    Usage: jarsigner [options] jar-file alias
+           jarsigner -verify [options] jar-file [alias...]
+
+    [-keystore <url>]           keystore location
+    [-storepass <password>]     password for keystore integrity
+    [-storetype <type>]         keystore type
+    [-keypass <password>]       password for private key (if different)
+    [-certchain <file>]         name of alternative certchain file
+    [-sigfile <file>]           name of .SF/.DSA file
+    [-signedjar <file>]         name of signed JAR file
+    [-digestalg <algorithm>]    name of digest algorithm
+    [-sigalg <algorithm>]       name of signature algorithm
+    [-verify]                   verify a signed JAR file
+    [-verbose[:suboptions]]     verbose output when signing/verifying.
+                                suboptions can be all, grouped or summary
+    [-certs]                    display certificates when verbose and verifying
+    [-tsa <url>]                location of the Timestamping Authority
+    [-tsacert <alias>]          public key certificate for Timestamping Authority
+    [-altsigner <class>]        class name of an alternative signing mechanism
+    [-altsignerpath <pathlist>] location of an alternative signing mechanism
+    [-internalsf]               include the .SF file inside the signature block
+    [-sectionsonly]             don't compute hash of entire manifest
+    [-protected]                keystore has protected authentication path
+    [-providerName <name>]      provider name
+    [-providerClass <class>     name of cryptographic service provider's
+      [-providerArg <arg>]] ... master class file and constructor argument
+    [-strict]                   treat warnings as errors
+
+    $ keytool -genkey -alias cbay -keystore cbay -storepass "admin123" -keypass "admin123" -keyalg "RSA"
+    $ jarsigner -keystore cbay -sigfile SIG -signedjar test.jar TestApp.jar cbay
+
+####Verifying Signed JAR Files
+    jarsigner -verify jar-file
+
+###Using JAR-related APIs
+
+    The java.util.jar package
+    The java.net.JarURLConnection class
+    The java.net.URLClassLoader class
+
+    package com.cbay;
+
+    import java.io.IOException;
+    import java.net.URL;
+    import java.net.MalformedURLException;
+    import java.lang.reflect.InvocationTargetException;
+
+    /**
+     * Runs a jar application from any url. Usage is 'java JarRunner url [args..]'
+     * where url is the url of the jar file and args is optional arguments to
+     * be passed to the application's main method.
+     */
+    public class JarRunner {
+        public static void main(String[] args) {
+            if (args.length < 1) {
+                usage();
+            }
+            URL url = null;
+            try {
+                url = new URL(args[0]);
+            } catch (MalformedURLException e) {
+                fatal("Invalid URL: " + args[0]);
+            }
+            // Create the class loader for the application jar file
+            JarClassLoader cl = new JarClassLoader(url);
+            // Get the application's main class name
+            String name = null;
+            try {
+                name = cl.getMainClassName();
+            } catch (IOException e) {
+                System.err.println("I/O error while loading JAR file:");
+                e.printStackTrace();
+                System.exit(1);
+            }
+            if (name == null) {
+                fatal("Specified jar file does not contain a 'Main-Class'" +
+                      " manifest attribute");
+            }
+            // Get arguments for the application
+            String[] newArgs = new String[args.length - 1];
+            System.arraycopy(args, 1, newArgs, 0, newArgs.length);
+            // Invoke application's main class
+            try {
+                cl.invokeClass(name, newArgs);
+            } catch (ClassNotFoundException e) {
+                fatal("Class not found: " + name);
+            } catch (NoSuchMethodException e) {
+                fatal("Class does not define a 'main' method: " + name);
+            } catch (InvocationTargetException e) {
+                e.getTargetException().printStackTrace();
+                System.exit(1);
+            }
+        }
+
+        private static void fatal(String s) {
+            System.err.println(s);
+            System.exit(1);
+        }
+
+        private static void usage() {
+            fatal("Usage: java JarRunner url [args..]");
+        }
+    }
+
+    package com.cbay;
+
+    import java.net.URL;
+    import java.net.URLClassLoader;
+    import java.net.JarURLConnection;
+    import java.lang.reflect.Method;
+    import java.lang.reflect.Modifier;
+    import java.lang.reflect.InvocationTargetException;
+    import java.util.jar.Attributes;
+    import java.io.IOException;
+
+    /**
+     * A class loader for loading jar files, both local and remote.
+     */
+    class JarClassLoader extends URLClassLoader {
+        private URL url;
+
+        /**
+         * Creates a new JarClassLoader for the specified url.
+         *
+         * @param url the url of the jar file
+         */
+        public JarClassLoader(URL url) {
+            super(new URL[] { url });
+            this.url = url;
+        }
+
+        /**
+         * Returns the name of the jar file main class, or null if
+         * no "Main-Class" manifest attributes was defined.
+         */
+        public String getMainClassName() throws IOException {
+            URL u = new URL("jar", "", url + "!/");
+            JarURLConnection uc = (JarURLConnection)u.openConnection();
+            Attributes attr = uc.getMainAttributes();
+            return attr != null ? attr.getValue(Attributes.Name.MAIN_CLASS) : null;
+        }
+
+        /**
+         * Invokes the application in this jar file given the name of the
+         * main class and an array of arguments. The class must define a
+         * static method "main" which takes an array of String arguemtns
+         * and is of return type "void".
+         *
+         * @param name the name of the main class
+         * @param args the arguments for the application
+         * @exception ClassNotFoundException if the specified class could not
+         *            be found
+         * @exception NoSuchMethodException if the specified class does not
+         *            contain a "main" method
+         * @exception InvocationTargetException if the application raised an
+         *            exception
+         */
+        public void invokeClass(String name, String[] args)
+            throws ClassNotFoundException,
+                   NoSuchMethodException,
+                   InvocationTargetException
+        {
+            Class c = loadClass(name);
+            Method m = c.getMethod("main", new Class[] { args.getClass() });
+            m.setAccessible(true);
+            int mods = m.getModifiers();
+            if (m.getReturnType() != void.class || !Modifier.isStatic(mods) ||
+                !Modifier.isPublic(mods)) {
+                throw new NoSuchMethodException("main");
+            }
+            try {
+                m.invoke(null, new Object[] { args });
+            } catch (IllegalAccessException e) {
+                // This should not happen, as we have disabled access checks
+            }
+        }
+
+    }
+    
+    $ javac -classpath .:target src/com/cbay/JarRunner.java
+    $ java -classpath .:target  com.cbay.JarRunner http://localhost:8080/HelloWorld.jar
+
+ 
+
+
+
+
+
+
+
+
+
+
+
+##-------------------------------------------------------------------------------------------------------
 
 ## Q & A
 
@@ -3698,6 +5498,35 @@ To remove the warning, the declaration of c should be modified to include an app
 ####Hungarian Standards
     Name = attribute+type+object description, For example, iMyData.
 
+###5. error: package org.apache.log4j does not exist
+    $ javac TestApp.java        #compile java file
+    $ java TestApp              #run class name, not TestApp.class
+    
+    $ javac src/com/cbay/PropertyUtilTest.java
+    $ java com.cbay.PropertyUtilTest
+    
+    $ jar cvf TestApp.jar target
+    $ java -classpath TestApp.jar TestApp
+    
+    MANIFEST.MF
+    Main-Class: TestApp
+    
+    $ jar umf MANIFEST.MF TestApp.jar
+    $ java -jar TestApp.jar
+    
+    # compile java file which import 3rd party's libs.
+    alias javacd='javac -classpath .:target:$JAVA_LIB/junit-3.8.2.jar:$CLASSPATH -Djava.ext.dirs=.:$JAVA_LIB -sourcepath src -d target '
+    alias javad='java -classpath .:target:$JAVA_LIB/junit-3.8.2.jar:$CLASSPATH -Djava.ext.dirs=.:$JAVA_LIB '
+    alias junitd='javad org.junit.runner.JUnitCore '
+
+###6. firefox applet
+    plugins_dir="/usr/lib/firefox/plugins/"
+    if !([ -d $plugins_dir ]) then
+        sudo mkdir $plugins_dir
+    fi
+    sudo ln -s /data/ubuntu/jdk/jdk1.7.0_21/jre/plugin/i386/ns7/libjavaplugin_oji.so $plugins_dir
+
+
 
 ## REFERENCES
 - [The Java Tutorials](http://docs.oracle.com/javase/tutorial/index.html)
@@ -3711,4 +5540,77 @@ To remove the warning, the declaration of c should be modified to include an app
 - [Java™ Platform Standard Ed. 6](http://docs.oracle.com/javase/6/docs/api/)
 - [JAVA 反射-getDeclaredMethod()实例](http://bluewens.blog.163.com/blog/static/699130720125445620187/)
 - [Java泛型总结](http://www.open-open.com/lib/view/open1353144198545.html)
+- [Java程序的编译、执行和打包](http://blog.sina.com.cn/s/blog_774c75080100q73w.html)
+- [在ubuntu下firefox跑Applet](http://blog.csdn.net/moliqin/article/details/7589467)
+- [Java使用MessageDigest完成MD5，SHA-1加密](http://gaeblog.wylyeak.org/articles/2012/08/19/1345387143754.html)
+
+## APPENDIX I
+
+###EncryptUtil
+    import java.security.MessageDigest;
+    import java.security.NoSuchAlgorithmException;
+    import junit.framework.Assert;
+    import org.junit.Test;
+     
+    public class EncryptUtil {
+     
+        public static String MD2 = "MD2";
+        public static String MD5 = "MD5";
+        public static String SHA1 = "SHA-1";
+        public static String SHA256 = "SHA-256";
+        public static String SHA384 = "SHA-384";
+        public static String SHA512 = "SHA-512";
+     
+        /**
+         * @param str
+         *            加密明文
+         * @param algorithm
+         *            加密算法
+         * @return 加密结果字符串
+         */
+        public static String encrypt(String str, String algorithm) {
+            try {
+                MessageDigest messageDigest = MessageDigest.getInstance(algorithm);
+                messageDigest.reset();
+                messageDigest.update(str.getBytes());
+                byte[] res = messageDigest.digest();
+                return byte2hex(res);
+            } catch (NoSuchAlgorithmException e) {
+                e.printStackTrace();
+                return str;
+            }
+        }
+     
+        /**
+         * 将byte数组转换为16进制表示
+         *
+         * @param byteArray
+         * @return
+         */
+        private static String byte2hex(byte[] byteArray) {
+            StringBuffer md5StrBuff = new StringBuffer();
+            for (int i = 0; i < byteArray.length; i++) {
+                if (Integer.toHexString(0xFF & byteArray[i]).length() == 1) {
+                    md5StrBuff.append("0").append(
+                            Integer.toHexString(0xFF & byteArray[i]));
+                } else {
+                    md5StrBuff.append(Integer.toHexString(0xFF & byteArray[i]));
+                }
+     
+            }
+            return md5StrBuff.toString();
+        }
+     
+        @Test
+        public void test() {
+            String str = "123";
+            System.out.println(EncryptUtil.encrypt(str, EncryptUtil.MD5)
+                    .toLowerCase());
+            Assert.assertEquals("202cb962ac59075b964b07152d234b70",
+                    EncryptUtil.encrypt(str, EncryptUtil.MD5));
+            System.out.println(EncryptUtil.encrypt(str, EncryptUtil.SHA1));
+            Assert.assertEquals("40bd001563085fc35165329ea1ff5c5ecbdbbeef",
+                    EncryptUtil.encrypt(str, EncryptUtil.SHA1));
+        }
+    }
 
